log
Fri 24 Mar 2023 05:38:52 PM UTC: 
 tests:  0|6
total_score: 0/70
eb0d38b
Fri 24 Mar 2023 05:45:16 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:3: error: unknown type name ‘list’; did you mean ‘List’?
   32 |   list* lista = (list*) malloc(sizeof(list));
      |   ^~~~
      |   List
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   32 |   list* lista = (list*) malloc(sizeof(list));
      |                  ^~~~
      |                  List
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   list* lista = (list*) malloc(sizeof(list));
      |                       ^
list.c:33:8: error: request for member ‘head’ in something not a structure or union
   33 |   lista->head = NULL;
      |        ^~
list.c:34:8: error: request for member ‘tail’ in something not a structure or union
   34 |   lista->tail = NULL;
      |        ^~
list.c:35:8: error: request for member ‘current’ in something not a structure or union
   35 |   lista->current = NULL;
      |        ^~
list.c:37:13: error: returning ‘int *’ from a function with incompatible return type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
   37 |      return lista;
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1906b1d
Fri 24 Mar 2023 05:45:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
586a86c
Fri 24 Mar 2023 05:48:49 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
07369a5
Fri 24 Mar 2023 05:50:18 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 25/70
28b2b59
Fri 24 Mar 2023 05:51:53 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
ff0331e
Fri 24 Mar 2023 06:02:08 PM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  10|2
total_score: 45/70
0ec3d7c
Fri 24 Mar 2023 06:09:37 PM UTC: 
 list.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:136:15: error: initialization of ‘Node *’ from incompatible pointer type ‘List *’ {aka ‘struct List *’} [-Werror=incompatible-pointer-types]
  136 |   Node* aux = list
      |               ^~~~
list.c:137:3: error: expected ‘,’ or ‘;’ before ‘Node’
  137 |   Node*
      |   ^~~~
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
In file included from test.c:5:
list.c:136:9: error: unused variable ‘aux’ [-Werror=unused-variable]
  136 |   Node* aux = list
      |         ^~~
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:140:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  140 | void cleanList(List * list) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9ee2f8f
Fri 24 Mar 2023 06:09:59 PM UTC: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  11|1
total_score: 55/70
c9365f1
